syntax = "proto3";

// SkyWalking config package
package adapter.skywalking.config;

option go_package="config";

// Param for SkyWalking probe
message Params {
    // Server Address of SkyWalking backend
    string server_address = 1;
}
